logs/pyrsp.log
Listing '.'...
Listing './bin'...
Compiling './bin/miniterm.py'...
Compiling './bin/readelf.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/construct'...
Listing './lib/python3.5/site-packages/construct/examples'...
Listing './lib/python3.5/site-packages/construct/examples/formats'...
Listing './lib/python3.5/site-packages/construct/examples/formats/data'...
Listing './lib/python3.5/site-packages/construct/examples/formats/executable'...
Listing './lib/python3.5/site-packages/construct/examples/formats/filesystem'...
Listing './lib/python3.5/site-packages/construct/examples/formats/graphics'...
Listing './lib/python3.5/site-packages/construct/examples/protocols'...
Listing './lib/python3.5/site-packages/construct/lib'...
Listing './lib/python3.5/site-packages/construct-2.8.20.egg-info'...
Listing './lib/python3.5/site-packages/elftools'...
Listing './lib/python3.5/site-packages/elftools/common'...
Listing './lib/python3.5/site-packages/elftools/construct'...
Listing './lib/python3.5/site-packages/elftools/construct/lib'...
Listing './lib/python3.5/site-packages/elftools/dwarf'...
Listing './lib/python3.5/site-packages/elftools/elf'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyelftools-0.24.egg-info'...
Listing './lib/python3.5/site-packages/pyrsp'...
Compiling './lib/python3.5/site-packages/pyrsp/rsp.py'...
***   File "./lib/python3.5/site-packages/pyrsp/rsp.py", line 35
    print "cannot access", args[0]
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyrsp-0.3.2.egg-info'...
Listing './lib/python3.5/site-packages/pyserial-3.4.dist-info'...
Listing './lib/python3.5/site-packages/serial'...
Listing './lib/python3.5/site-packages/serial/threaded'...
Listing './lib/python3.5/site-packages/serial/tools'...
Listing './lib/python3.5/site-packages/serial/urlhandler'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
